# advent-of-code

./: .gitignore  Cargo.toml
2023/day01/: Cargo.toml
2023/day02/: Cargo.toml
2023/day03/: Cargo.toml
2023/day04/: Cargo.toml
2023/day05/: Cargo.toml
2023/day06/: Cargo.toml
2023/day07/: Cargo.toml
2023/day08/: Cargo.toml
2023/day09/: Cargo.toml
2024/day01/: Cargo.toml
2024/day02/: Cargo.toml
2024/day03/: Cargo.toml
2024/day04/: Cargo.toml
2024/day05/: Cargo.toml
2024/day06/: Cargo.toml
2024/day07/: Cargo.toml
2024/day08/: Cargo.toml
2024/day09/: Cargo.toml
2024/day10/: Cargo.toml
2024/day11/: Cargo.toml
2024/day12/: Cargo.toml
2024/day13/: Cargo.toml
2024/day14/: Cargo.toml
2024/day15/: Cargo.toml
2024/day16/: Cargo.toml
2024/day17/: Cargo.toml
2024/day18/: Cargo.toml
2024/day19/: Cargo.toml
2024/day20/: Cargo.toml
2024/day21/: Cargo.toml
2024/day22/: Cargo.toml
2024/day23/: Cargo.toml
2024/day24/: Cargo.toml
2024/day25/: Cargo.toml
2024/utils/: Cargo.toml
2025/day01/: Cargo.toml
2025/day02/: Cargo.toml
2025/day03/: Cargo.toml
2025/day04/: Cargo.toml
2025/day05/: Cargo.toml
2025/day06/: Cargo.toml
2025/day07/: Cargo.toml
2025/day08/: Cargo.toml
2025/day09/: Cargo.toml
2025/day10/: Cargo.toml
2025/day11/: Cargo.toml
2025/day12/: Cargo.toml
day01/src/: main.rs
day04/: Cargo.toml
day05/: Cargo.toml
day06/: Cargo.toml
day11/src/: main.rs
day12/src/: main.rs
day13/: Cargo.toml  day13.py  python_v.py
day15/: debug.txt
day24/: Cargo.toml
utils/: Cargo.toml
(+71 files in other folders)
