[workspace]
resolver = "2"
members = [
	"2023/day01", "2023/day02", "2023/day03", "2023/day04", "2023/day05", "2023/day06", "2023/day07", "2023/day08", "2023/day09",
	"2024/day01",
	"2024/day02",
	"2024/day03",
	"2024/day04",
	"2024/day05",
	"2024/day06",
	"2024/day07",
	"2024/day08",
	"2024/day09",
	"2024/day10",
	"2024/day11",
	"2024/day12",
	"2024/day13",
	"2024/day14",
	"2024/day15",
	"2024/day16",
	"2024/day17",
	"2024/day18",
	"2024/day19",
	"2024/day20",
	"2024/day21",
	"2024/day22",
	"2024/day23",
	"2024/day24",
	"2024/day25",
	"2024/utils", "2025/day01", "2025/day02", "2025/day03", "2025/day04", "2025/day05",
	"utils",
]
